# osvald-org

./: Cargo.toml  README.md  index.html  index.scss  todo.md
src/: main.rs  router.rs
src/components/: footer.rs  navbar.rs
src/pages/: contact.rs  home.rs  mod.rs  not_found.rs
