[package]
name = "osvald-org"
version = "0.1.0"
edition = "2021"
description = "Personal website of Osvald Ivarsson completely unnecessarily built with Rust and Webassembly."
readme = "README.md"
repository = "https://github.com/Foosvald/osvald-org"
license = "MIT"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
log = "0.4.6"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"